# mav_agent

./: .gitignore  .mcp.json  README.md  pyproject.toml  test_track.py
.cursor/: mcp.json
src/follow_anything/: __init__.py  agent.py  agent_langchain.py  mavlink.py  qwen_bbox.py  session.py  tracker.py  visual_servo.py
src/follow_anything/cli/: __init__.py  __main__.py  humancli.py
src/follow_anything/mcp/: __init__.py  protocol.py  server.py
src/follow_anything/skills/: __init__.py  builtin.py  registry.py
src/mav_agent/: __init__.py  agent_langchain.py  defaults.py  qwen_bbox.py  session.py  tracker.py
src/mav_agent/cli/: __init__.py  __main__.py  humancli.py
src/mav_agent/control/: __init__.py  capabilities.py  config.py  mavlink_backend.py  protocol.py  ros2_backend.py  vehicle_state.py
src/mav_agent/mcp/: __init__.py  protocol.py  server.py
src/mav_agent/perception/: __init__.py  ros_context.py  rtsp.py  source.py  udp.py
src/mav_agent/skills/: __init__.py  discovery.py  flight.py  helpers.py  meta.py  registry.py  vision.py
tests/: test_mcp_protocol.py
